Project template updated: modules accounting added; derectories refactoring

--- a/ATiOSProjectTemplate/ProjectApplicationName/Podfile
+++ b/ATiOSProjectTemplate/ProjectApplicationName/Podfile
@@ -7,6 +7,9 @@ target 'ApplicationName' do
   
   pod 'SwiftLint'
   pod 'R.swift'
+  pod 'JGProgressHUD'
+  pod 'SDWebImage'
+  pod 'Alamofire'
 
 #  Exclude DEPLOYMENT_TARGET warnings
   post_install do |installer|
