--- a/ATiOSProjectTemplate/ProjectApplicationName/ApplicationName.xcodeproj/xcshareddata/xcschemes/ApplicationName.xcscheme
+++ b/ATiOSProjectTemplate/ProjectApplicationName/ApplicationName.xcodeproj/xcshareddata/xcschemes/ApplicationName.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "30D3FDACB7D17A0BF5E8ADCF"
-               BuildableName = ".app"
+               BuildableName = "ApplicationName.app"
                BlueprintName = "ApplicationName"
                ReferencedContainer = "container:ApplicationName.xcodeproj">
             </BuildableReference>
@@ -33,7 +33,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "B598F813DA8C0EA645815ECB"
-               BuildableName = ".xctest"
+               BuildableName = "ApplicationName.xctest"
                BlueprintName = "ApplicationNameTests"
                ReferencedContainer = "container:ApplicationName.xcodeproj">
             </BuildableReference>
@@ -55,7 +55,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "30D3FDACB7D17A0BF5E8ADCF"
-            BuildableName = ".app"
+            BuildableName = "ApplicationName.app"
             BlueprintName = "ApplicationName"
             ReferencedContainer = "container:ApplicationName.xcodeproj">
          </BuildableReference>
@@ -72,7 +72,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "30D3FDACB7D17A0BF5E8ADCF"
-            BuildableName = ".app"
+            BuildableName = "ApplicationName.app"
             BlueprintName = "ApplicationName"
             ReferencedContainer = "container:ApplicationName.xcodeproj">
          </BuildableReference>
