AlertPresentationViewController + module template; templates script updated.

--- a/ATiOSProjectTemplate/XcodeTemplates/Templates/MVVM+Coordinator/MVVM-Coordinator.xctemplate/TemplateInfo.plist
+++ b/ATiOSProjectTemplate/XcodeTemplates/Templates/MVVM+Coordinator/MVVM-Coordinator.xctemplate/TemplateInfo.plist
@@ -39,6 +39,7 @@
 			<array>
 				<string>Storyboard</string>
 				<string>Code</string>
+				<string>Code — AlertPresentation</string>
 			</array>
 		</dict>
 	</array>
